opam-version: "2.0"
maintainer: "rastrian"
author: "rastrian"
homepage: "https://github.com/rastrian/blog"
dev-repo: "git+https://github.com/rastrian/blog.git"
bug-reports: "https://github.com/rastrian/blog/issues"
synopsis: "Simple OCaml blog using GitHub Issues"
depends: [
  "ocaml" {>= "4.14.0"}
  "dune" {>= "3.0"}
  "dream"
  "cohttp-lwt-unix"
  "yojson"
  "cmarkit"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

